# rustjunosmcp

./: .dockerignore  .envrc  .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  README.md  TODO.md  devices-template.json  justfile  mise.toml  tokens-template.json
.cargo/: audit.toml
.codex/: config.toml
.github/workflows/: ci.yml  release-image.yml  security.yml
docs/: AUDIT.md  METRICS.md
docs/archive/: rust-srxmcp-changelog.md
docs/spikes/: 2026-05-05-rmcp-streamable-http-spike.md  2026-05-19-rmcp-streamable-http-disconnect-half-b.md  2026-05-19-rmcp-upstream-issue-draft.md
packaging/logrotate/: rust-junosmcp-audit
packaging/lxc/: install.sh
packaging/systemd/: rust-junosmcp.service  (+1 more)
rust-junosmcp/: AGENTS.md  Cargo.toml
rust-junosmcp-audit/: Cargo.toml
rust-junosmcp-audit/src/: init.rs  lib.rs  redact.rs  scope.rs  testutil.rs
rust-junosmcp-auth/: AGENTS.md  Cargo.toml
rust-junosmcp-auth/src/: caller.rs  file.rs  lib.rs  store.rs  token.rs  tower.rs
rust-junosmcp-core/: AGENTS.md  Cargo.toml
rust-junosmcp-core/src/: bootstrap.rs  cancel.rs  device_lease.rs  device_manager.rs  error.rs  helpers.rs  inventory.rs  lib.rs  output.rs  policy.rs
rust-junosmcp-core/src/limits/: concurrency.rs  mod.rs  overload.rs  prometheus.rs  rate_limit.rs  session.rs
rust-junosmcp-core/src/tools/: add_device.rs  batch.rs  candidate_transaction.rs  commit_check.rs  config_diff.rs  discard_candidate.rs  execute_command.rs  facts.rs  fetch_file.rs  get_config.rs  list_staged_files.rs  load_commit.rs  mod.rs  pfe.rs  reload_devices.rs  rollback_config.rs  router_list.rs  template.rs  transfer_file.rs  upgrade_junos.rs
rust-junosmcp-core/tests/: device_lease_process.rs  integration_real_device.rs  integration_upgrade_junos.rs  limits_public_api.rs
rust-junosmcp-limits/: Cargo.toml
rust-junosmcp-limits/src/: concurrency.rs  config.rs  lib.rs  overload.rs  prometheus.rs  router.rs  session.rs
rust-junosmcp-srx-core/: Cargo.toml
rust-junosmcp-srx-core/src/: absence.rs  lib.rs  xml.rs
rust-junosmcp-srx-core/src/workflows/: cluster_health.rs  cluster_status.rs  idp_package.rs  services_status.rs
rust-junosmcp-srx-core/src/workflows/signature_package/: confirmation.rs  mod.rs  preflight.rs
rust-junosmcp-srx-core/src/workflows/support_bundle/: artefacts.rs  mod.rs  redact.rs  staging.rs
rust-junosmcp-srx-core/tests/fixtures/cluster_status/: clustered_with_not_configured_in_desc.xml  standalone_not_configured.xml
rust-junosmcp-srx-core/tests/fixtures/license/: junos_24_4_demolab.xml  permanent.xml
rust-junosmcp-srx-core/tests/fixtures/services_status/: atp_not_configured.xml  idp_active.xml  idp_clustered.xml  secintel_not_configured.xml  utm_av_not_configured.xml
rust-junosmcp-srx-core/tests/fixtures/signature_package/: appid_check_server_unreachable.xml  appid_check_server_update_available.xml  appid_download_status_complete.xml  appid_download_status_pending.xml  appid_install_status_failed_missing_package.xml  appid_uninstall_status_complete.xml  appid_uninstall_status_pending.xml  commit_confirmed_active.xml  idp_check_server_at_latest.xml  idp_check_server_unreachable.xml  idp_download_request.xml  idp_download_status_complete.xml  idp_download_status_running.xml  idp_install_request.xml  idp_install_status_complete.xml  idp_install_status_noop_same_version.xml  idp_install_status_running.xml  idp_package_information_clustered.xml  idp_package_information_fresh.xml  idp_package_information_post_install.xml  idp_rollback_no_previous.xml  idp_rollback_request.xml
rust-junosmcp-srx-core/tests/fixtures/vpn_lifecycle/: ipsec_sa_up_test10.xml
rust-junosmcp/src/: auth_layer.rs  caller.rs  cli.rs  cli_validate.rs  env_compat.rs  http_transport.rs  main.rs  server.rs  tls.rs  token_cmd.rs
rust-junosmcp/src/server/: srx.rs
rust-junosmcp/tests/: add_device_smoke.rs  audit.rs  batch_smoke.rs  env_compat.rs  http_limits.rs  http_metrics.rs  http_reload.rs  http_smoke.rs  http_tls.rs  list_staged_files_smoke.rs  pfe_smoke.rs  reload_devices_smoke.rs  rpc_timeout_smoke.rs  srx_audit.rs  srx_http_metrics.rs  srx_http_smoke.rs  srx_http_tls.rs  srx_live_smoke.rs  stdio_smoke.rs  template_smoke.rs  token_subcommand.rs  transfer_file_smoke.rs
rust-junosmcp/tests/common/: mod.rs
rust-junosmcp/tests/fixtures/: junos-tools-v0.7.json  srx-tools-v0.3.6.json
rust-srxmcp/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
rust-srxmcp-core/: AGENTS.md  Cargo.toml
rust-srxmcp-core/src/: absence.rs  error.rs  lib.rs  xml.rs
rust-srxmcp-core/src/workflows/: appid_package.rs  cluster_health.rs  cluster_status.rs  idp_package.rs  license.rs  mod.rs  services_status.rs  vpn_lifecycle.rs
rust-srxmcp-core/src/workflows/signature_package/: confirmation.rs  mod.rs  plan.rs  poll.rs  preflight.rs
rust-srxmcp-core/src/workflows/support_bundle/: mod.rs  problem_type.rs  redact.rs  staging.rs
rust-srxmcp-core/tests/fixtures/cluster_status/: clustered_healthy.xml  node_unreachable.xml
rust-srxmcp-core/tests/fixtures/license/: eval_trial.xml  live_eval_with_junos_attrs.xml  none_installed.xml
rust-srxmcp-core/tests/fixtures/services_status/: appid_active.xml
rust-srxmcp-core/tests/fixtures/signature_package/: appid_check_server_at_latest.xml  appid_download_status_running.xml  appid_install_status_complete.xml  appid_install_status_running.xml  appid_package_version_clustered.xml  appid_package_version_fresh.xml  appid_package_version_post_install.xml
rust-srxmcp-core/tests/fixtures/vpn_lifecycle/: ike_not_configured.xml  ike_sa_empty_test16.xml  ike_sa_up_test10.xml  ipsec_not_configured.xml  ipsec_sa_down.xml  ipsec_sa_empty_test16.xml  ipsec_sa_up_test10.xml
rust-srxmcp/src/: cli.rs  cli_validate.rs  http_transport.rs  lib.rs  main.rs  server.rs  tls.rs
rust-srxmcp/tests/: audit.rs  http_limits.rs  http_metrics.rs  http_smoke.rs  http_tls.rs  live_smoke.rs  status_tool.rs
rust-srxmcp/tests/common/: mod.rs
scripts/: package-lxc.sh  scan-known-hosts.sh  test-lxc-distributions.sh
(+141 files in other folders)
