[workspace]
members = ["rust-junosmcp-core", "rust-junosmcp", "rust-junosmcp-auth"]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/fastrevmd-lab/RustJunosMCP"
authors      = ["fastrevmd-lab"]

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars     = "1.0"
anyhow       = "1"
rustez       = { path = "../rustEZ/rustez" }
globset      = "0.4"
# rmcp 0.x — pinned at task 16; placeholder here

# auth + remote transport (sub-project #2)
arc-swap         = "1"
sha2             = "0.10"
rand             = "0.8"
subtle           = "2"
base64ct         = { version = "1", features = ["alloc"] }
chrono           = { version = "0.4", default-features = false, features = ["serde", "clock"] }
axum             = "0.8"
tower            = "0.5"
tower-http       = "0.6"
rustls           = "0.23"
tokio-rustls     = "0.26"
rustls-pemfile   = "2"
