[workspace]
members          = ["rust-junosmcp", "rust-junosmcp-core", "rust-junosmcp-auth", "rust-junosmcp-srx-core", "rust-junosmcp-audit"]
default-members  = ["rust-junosmcp", "rust-junosmcp-core", "rust-junosmcp-auth"]
resolver = "2"

[workspace.package]
edition    = "2021"
license    = "MIT"
repository = "https://github.com/fastrevmd-lab/rustjunosmcp"
authors    = ["fastrevmd-lab"]

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
tokio-util   = { version = "0.7", default-features = false, features = ["rt"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
tracing      = "0.1"
async-trait      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars     = "1.0"
anyhow       = "1"
rustez       = "0.12.1"
globset      = "0.4"
regex        = "1"
metrics                     = "0.24.6"
metrics-exporter-prometheus = { version = "0.18.3", default-features = false }

# auth + remote transport (sub-project #2)
arc-swap         = "1"
sha2             = "0.10"
hmac             = "0.12"
rand             = "0.8"
subtle           = "2"
base64ct         = { version = "1", features = ["alloc"] }
chrono           = { version = "0.4", default-features = false, features = ["serde", "clock"] }
axum             = "0.8"
tower            = "0.5"
tower-http       = "0.6"
http             = "1"
http-body-util   = "0.1"
rustls           = { version = "0.23", default-features = false, features = ["ring", "std", "tls12", "logging"] }
rustls-pki-types = { version = "1", features = ["std"] }
axum-server      = { version = "0.8", default-features = false }
rcgen            = "0.14"
tempfile         = "3"
ureq             = "2"
minijinja        = { version = "2", default-features = false, features = ["builtins", "loader", "serde"] }
dashmap          = "6"
http-body        = "1"
