[package]
name        = "rust-junosmcp-audit"
version     = "0.1.0"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "Caller-attributed audit events and configurable audit sink for rust-junosmcp / rust-srxmcp."

[features]
test-util = []

[dependencies]
rust-junosmcp-auth = { path = "../rust-junosmcp-auth" }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "registry"] }
serde_json         = { workspace = true }
hmac               = { workspace = true }
sha2               = { workspace = true }

[dev-dependencies]
tracing            = { workspace = true }
tempfile           = "3"
