[package]
name        = "rust-junosmcp-auth"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "Bearer-token authentication and per-token scopes for rust-junosmcp."

[dependencies]
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
sha2         = { workspace = true }
rand         = { workspace = true }
subtle       = { workspace = true }
base64ct     = { workspace = true }
chrono       = { workspace = true }
arc-swap     = { workspace = true }
tracing      = { workspace = true }

[dev-dependencies]
tempfile     = "3"
