[package]
name        = "rust-junosmcp-core"
version     = "0.8.0"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "Core logic and Junos tool handlers for rust-junosmcp."

[dependencies]
chrono       = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true, features = ["preserve_order"] }
thiserror    = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
schemars     = { workspace = true }
rustez       = { workspace = true }
globset      = { workspace = true }
async-trait  = { workspace = true }
minijinja    = { workspace = true }
arc-swap     = { workspace = true }
tempfile     = { workspace = true }
sha2         = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
