[package]
name        = "rust-junosmcp"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
description = "MCP server for Juniper Junos devices, built on rustEZ."

[[bin]]
name = "rust-junosmcp"
path = "src/main.rs"

[dependencies]
rust-junosmcp-core = { path = "../rust-junosmcp-core" }
rust-junosmcp-auth = { path = "../rust-junosmcp-auth" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.8", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
    "transport-streamable-http-server",
] }
schemars           = { workspace = true }
arc-swap           = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true, features = ["trace"] }
http               = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
tokio = { workspace = true }
ureq = { version = "2", features = ["json"] }
