[package]
name        = "rust-junosmcp"
version     = "0.7.0"
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
description = "MCP server for Juniper Junos devices, built on rustEZ."

[features]
default = ["tls"]
tls = ["dep:rustls", "dep:rustls-pki-types", "dep:axum-server"]

[[bin]]
name = "rust-junosmcp"
path = "src/main.rs"

[dependencies]
rust-junosmcp-core = { path = "../rust-junosmcp-core" }
rust-junosmcp-auth = { path = "../rust-junosmcp-auth" }
rust-junosmcp-limits = { path = "../rust-junosmcp-limits" }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
rmcp = { version = "2", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
    "transport-streamable-http-server",
] }
schemars           = { workspace = true }
arc-swap           = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true, features = ["trace"] }
http               = { workspace = true }
rustls             = { workspace = true, optional = true }
rustls-pki-types   = { workspace = true, optional = true }
axum-server        = { workspace = true, optional = true, default-features = false, features = ["tls-rustls-no-provider"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ureq = { workspace = true, features = ["json", "tls"] }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
