[package]
name        = "rust-junosmcp"
version     = "0.8.0"
edition.workspace    = true
license.workspace    = true
repository.workspace = true
authors.workspace    = true
description = "Unified MCP server for Juniper Junos and SRX devices, built on rustEZ."

[features]
default = ["tls", "srx"]
tls = ["dep:rustls", "dep:rustls-pki-types", "dep:axum-server"]
srx = ["dep:rust-junosmcp-srx-core"]

[[bin]]
name = "rust-junosmcp"
path = "src/main.rs"

# These migrated suites exercise SRX-only tools and must not be selected for
# Junos-only builds. Keeping the requirement on each target also makes Cargo's
# feature boundary visible to CI and downstream contributors.
[[test]]
name = "srx_audit"
path = "tests/srx_audit.rs"
required-features = ["srx"]

[[test]]
name = "srx_http_limits"
path = "tests/srx_http_limits.rs"
required-features = ["srx"]

[[test]]
name = "srx_http_metrics"
path = "tests/srx_http_metrics.rs"
required-features = ["srx"]

[[test]]
name = "srx_http_smoke"
path = "tests/srx_http_smoke.rs"
required-features = ["srx"]

[[test]]
name = "srx_http_tls"
path = "tests/srx_http_tls.rs"
required-features = ["srx"]

[[test]]
name = "srx_live_smoke"
path = "tests/srx_live_smoke.rs"
required-features = ["srx"]

[dependencies]
rust-junosmcp-core = { path = "../rust-junosmcp-core" }
rust-junosmcp-auth = { path = "../rust-junosmcp-auth" }
rust-junosmcp-audit = { path = "../rust-junosmcp-audit" }
rust-junosmcp-srx-core = { path = "../rust-junosmcp-srx-core", optional = true }
tokio              = { workspace = true }
tokio-util         = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
sha2               = { workspace = true }
clap = { version = "4", features = ["derive"] }
rmcp = { version = "2", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
    "transport-streamable-http-server",
] }
schemars           = { workspace = true }
arc-swap           = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
tower-http         = { workspace = true, features = ["trace"] }
http               = { workspace = true }
rustls             = { workspace = true, optional = true }
rustls-pki-types   = { workspace = true, optional = true }
axum-server        = { workspace = true, optional = true, default-features = false, features = ["tls-rustls-no-provider"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
rust-junosmcp-audit = { path = "../rust-junosmcp-audit", features = ["test-util"] }
tempfile = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ureq = { workspace = true, features = ["json", "tls"] }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
