[package]
name        = "rust-srxmcp-core"
version     = "0.3.2"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "Core logic for rust-srxmcp (SRX-specific MCP workflows)."

[dependencies]
rust-junosmcp-core = { path = "../rust-junosmcp-core" }
rustez             = { workspace = true }
serde              = { workspace = true, features = ["derive"] }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
schemars           = { workspace = true }
quick-xml          = "0.36"
roxmltree          = "0.20"
time               = { version = "0.3", features = ["serde", "parsing", "formatting", "macros"] }
tokio              = { workspace = true, features = ["macros", "rt", "time"] }
uuid               = { version = "1", features = ["v4"] }
sha2               = "0.10"

[dev-dependencies]
pretty_assertions  = "1"
tokio              = { workspace = true, features = ["macros", "rt-multi-thread", "time", "test-util"] }
