[package]
name        = "rust-srxmcp"
version     = "0.3.6"
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
authors.workspace     = true
description = "MCP server for Juniper SRX-specific operational workflows."

[features]
default = ["tls"]
tls = ["dep:rustls", "dep:rustls-pki-types", "dep:axum-server"]

[[bin]]
name = "rust-srxmcp"
path = "src/main.rs"

[lib]
name = "rust_srxmcp"
path = "src/lib.rs"

[dependencies]
rust-junosmcp-core = { path = "../rust-junosmcp-core" }
rust-junosmcp-auth = { path = "../rust-junosmcp-auth" }
rust-junosmcp-limits = { path = "../rust-junosmcp-limits" }
rust-srxmcp-core   = { path = "../rust-srxmcp-core" }
tokio              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
rmcp = { version = "2", features = [
    "server",
    "macros",
    "transport-io",
    "schemars",
    "transport-streamable-http-server",
] }
schemars           = { workspace = true }
arc-swap           = { workspace = true }
axum               = { workspace = true }
tower              = { workspace = true }
http               = { workspace = true }
rustls             = { workspace = true, optional = true }
rustls-pki-types   = { workspace = true, optional = true }
axum-server        = { workspace = true, optional = true, default-features = false, features = ["tls-rustls-no-provider"] }

[dev-dependencies]
tempfile = { workspace = true }
ureq = { workspace = true, features = ["json", "tls"] }
serde_json = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
